src/css/style.css
/* ... */
#pbxEditToolbar {
  opacity: 0;
  pointer-events: none;
  transform: translateY(0.1rem) scale(0.1);
  transition:
    left 0.3s cubic-bezier(0.4, 0, 0.2, 1),
    top 0.3s cubic-bezier(0.4, 0, 0.2, 1),
    opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1),
    transform 0.3s cubic-bezier(0.4, 0, 0.2, 1),
    min-width 0.3s cubic-bezier(0.4, 0, 0.2, 1),
    width 0.3s cubic-bezier(0.4, 0, 0.2, 1),
    height 0.3s cubic-bezier(0.4, 0, 0.2, 1),
    border-radius 0.3s cubic-bezier(0.4, 0, 0.2, 1);
}

#pbxEditToolbar.is-visible {
  opacity: 1;
  pointer-events: auto;
  transform: translateY(0) scale(1);
  min-width: 4rem;
  padding-right: 1rem;
  padding-left: 1rem;
  height: 2.2rem;
  box-shadow: 0 0 0 10px oklch(86.9% 0.005 56.366);
  background: oklch(86.9% 0.005 56.366);
}

/* CSS for content inside page builder # start */
#pagebuilder {
  position: relative;
  max-height: 100%;
}
#pagebuilder a {
  pointer-events: none;
}

#pagebuilder #youtube-video::before {
  content: 'Select Video Element';
  font-family: 'Jost';
  background: #16a34a !important;
  color: white;
  text-decoration: none;
  margin-right: 8px;
  vertical-align: middle;
  min-height: 3rem;
  padding: 0.75rem 0.75rem;
  white-space: nowrap;
  word-break: keep-all;
  font-weight: 500;
  display: inline-flex;
  gap: 0.25rem;
  align-items: center;
  justify-content: center;
  border-radius: 9999px;
  border: 1px solid transparent;
  margin-bottom: 20px;
  font-size: 0.8rem !important;
}

@media (min-width: 640px) {
  #pagebuilder #youtube-video::before {
    font-size: 0.9rem !important;
    width: auto;
  }
}

#pagebuilder #youtube-video:hover::before {
  text-decoration: none;
  cursor: pointer;
}

#page-builder-editor a,
#pagebuilder a {
  text-decoration: underline;
}

#page-builder-editor #linktree p,
#pagebuilder #linktree p {
  width: 100%;
}

#page-builder-editor #linktree a,
#pagebuilder #linktree a {
  @apply pbx-py-4 pbx-px-2 pbx-block pbx-w-full;
}

#page-builder-editor #linktree a,
#pagebuilder #linktree a {
  text-decoration: none;
  font-weight: 500;
  color: inherit !important;
  width: 100%;
  cursor: pointer;
}
#page-builder-editor strong,
#pagebuilder strong {
  font-weight: 500;
}

.pbx-reorder-highlight {
  animation: pbx-reorder-flash 0.4s ease-in-out;
}

@keyframes pbx-reorder-flash {
  0% {
    transform: scale(1);
    opacity: 1;
  }
  50% {
    transform: scale(0.8);
    opacity: 0.6;
  }
  100% {
    transform: scale(1);
    opacity: 1;
  }
}

.pbx-sibling-highlight {
}

.pbx-myPrimaryInput,
.pbx-myPrimarySelect {
  box-sizing: border-box;
  border: 1px solid #e9e9e9;
  padding: 0.40625rem 0.625rem;
  font-size: 0.875rem;
  border-radius: 0.5rem;
  cursor: pointer;
  line-height: 1.5;
}

.pbx-myPrimarySelect {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: url("data:image/svg+xml,%3Csvg width='8' height='6' viewBox='0 0 8 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M0.292893 0.792893C0.683417 0.402369 1.31658 0.402369 1.70711 0.792893L4 3.08579L6.29289 0.792893C6.68342 0.402369 7.31658 0.402369 7.70711 0.792893C8.09763 1.18342 8.09763 1.81658 7.70711 2.20711L4.70711 5.20711C4.31658 5.59763 3.68342 5.59763 3.29289 5.20711L0.292893 2.20711C-0.0976311 1.81658 -0.0976311 1.18342 0.292893 0.792893Z' fill='%2335261C' fill-opacity='0.3'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-position: right 0.625rem center;
  background-size: 0.5rem;
}

.pbx-myPrimaryInput:focus,
.pbx-myPrimarySelect:focus {
  --tw-ring-inset: inset;
  --tw-ring-opacity: 1;
  --tw-ring-color: rgba(22, 163, 74, var(--tw-ring-opacity, 1));
  --tw-ring-shadow: 0 0 0 4px var(--tw-ring-color);
  --tw-ring-offset-width: 2px;
  --tw-ring-offset-color: white;
  --tw-ring-offset-shadow: 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow);
  border: 1px #dee6f0 solid;
}

.pbx-myPrimaryInput:focus-visible,
.pbx-myPrimarySelect:focus-visible {
  outline: none;
}

#pagebuilder-right-menu hr {
  border: none;
  height: 1px;
  background: oklch(93.6% 0.032 17.717);
  box-shadow: oklch(93.6% 0.032 17.717);
}

#page-builder-editor ol,
#pagebuilder ol,
#page-builder-editor ul,
#pagebuilder ul {
  list-style: disc !important;
  padding: 1rem 0 0 1rem;
  margin-left: 1em;
  line-height: 1.2;
}

#page-builder-editor ol,
#page-builder-editor-editable-area ol,
#page-builder-editor ul,
#page-builder-editor-editable-area ul {
  list-style: disc !important;
  padding: 1rem 0 0 1rem;
  line-height: 1.2;
}

.pbx-headless-dropdown {
  list-style: none;
  padding: 0;
}

/* Page Builder Reset Default Browser Styles Start*/
#pagebuilder input,
#pagebuilder button,
#pagebuilder textarea,
#pagebuilder select {
  font: inherit;
  color: inherit;
  background: none;
  border: none;
  padding: 0;
  margin: 0;
}
#pagebuilder blockquote,
#pagebuilder dl,
#pagebuilder dd,
#pagebuilder pre,
#pagebuilder hr,
#pagebuilder figure,
#pagebuilder p,
#pagebuilder h1,
#pagebuilder h2,
#pagebuilder h3,
#pagebuilder h4,
#pagebuilder h5,
#pagebuilder h6,
#pagebuilder ul,
#pagebuilder ol,
#pagebuilder li {
  margin: 0;
  font-weight: inherit;
}

#pagebuilder input,
#pagebuilder button,
#pagebuilder textarea,
#pagebuilder select {
  font: inherit;
  color: inherit;
  background: none;
  border: none;
  padding: 0;
  margin: 0;
}

#pagebuilder img {
  max-width: 100%;
  height: auto;
  display: block;
}

#pagebuilder a {
  color: inherit;
  text-decoration: none;
}
#pagebuilder code,
#pagebuilder pre,
#pagebuilder strong,
#pagebuilder em {
  font: inherit;
  font-weight: inherit;
}
/* Page Builder Reset Default Browser Styles End*/

